main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "demo-server" {
    ami = "ami-04a81a99f5ec58529"
    instance_type = "t2.micro"
    key_name = "b80"
    //security_groups = [ "demo-sg" ]
    vpc_security_group_ids = [aws_security_group.demo-sg.id]
    subnet_id = aws_subnet.b80-public-subnet-01.id
    for_each = toset(["b80-jenkins-master", "b80-build-slave", "b80-ansible"])
    tags = {
      Name = "${each.key}"
    }
}

resource "aws_security_group" "demo-sg" {
  name        = "b80-sg"
  description = "SSH Access"
  vpc_id = aws_vpc.b80-vpc.id
  
  ingress {
    description      = "SSH access"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "Jenkins port"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ssh-port"
  }
}

resource "aws_vpc" "b80-vpc" {
  cidr_block = "10.1.0.0/16"
  tags = {
    Name = "b80-vpc"
  }
  
}

resource "aws_subnet" "b80-public-subnet-01" {
  vpc_id = aws_vpc.b80-vpc.id
  cidr_block = "10.1.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone = "us-east-1a"
  tags = {
    Name = "b80-public-subnet-01"
  }
}

resource "aws_subnet" "b80-public-subnet-02" {
  vpc_id = aws_vpc.b80-vpc.id
  cidr_block = "10.1.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone = "us-east-1b"
  tags = {
    Name = "b80-public-subent-02"
  }
}

resource "aws_internet_gateway" "b80-igw" {
  vpc_id = aws_vpc.b80-vpc.id
  tags = {
    Name = "b80-igw"
  } 
}

resource "aws_route_table" "b80-public-rt" {
  vpc_id = aws_vpc.b80-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.b80-igw.id
  }
}

resource "aws_route_table_association" "b80-rta-public-subnet-01" {
  subnet_id = aws_subnet.b80-public-subnet-01.id
  route_table_id = aws_route_table.b80-public-rt.id
}

resource "aws_route_table_association" "b80-rta-public-subnet-02" {
  subnet_id = aws_subnet.b80-public-subnet-02.id
  route_table_id = aws_route_table.b80-public-rt.id
}
